--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 server.port=8282
 #datasource prop
 spring.datasource.name=test
-spring.datasource.url=mysql://root:a4ZgSisL6LG3UbURzkYZ@containers-us-west-202.railway.app:6133/railway
+spring.datasource.url=jdbc:mysql://root:a4ZgSisL6LG3UbURzkYZ@containers-us-west-202.railway.app:6133/railway
 spring.datasource.username = root
 spring.datasource.password = a4ZgSisL6LG3UbURzkYZ
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
